--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -1,5 +1,65 @@
 {{> nav_bar_investor}}
-<h2>Blog</h2>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos tempore laboriosam repellat, sunt aperiam ipsa
-    dignissimos mollitia suscipit atque, laborum quo voluptatibus. Cupiditate, aperiam? Quisquam porro laboriosam
-    inventore exercitationem? Eaque?</p>
+<section id="banner">
+    <img id="logo-keeeyz"src="/public/img/keeyz-logo.png" alt="">
+    <h2>Learn from our best experts</h2>
+    <p>and prepare your future</p>
+    <ul class="actions">
+        <li><a href="#" class="button big special">Learn More</a></li>
+    </ul>
+</section>
+
+<!-- One -->
+<section id="one" class="wrapper style1">
+    <div class="inner">
+        <article class="feature left">
+            <span class="image"><img src="images/pic01.jpg" alt="" /></span>
+            <div class="content">
+                <h2>Immobilier : comment réussir son investissement locatif</h2>
+                <p>Acheter un logement pour le louer est un engagement de long terme. Il faut attirer le plus grand
+                    nombre de candidats pour opérer la meilleure sélection en matière de solvabilité. Explications et
+                    conseils de Renaud Capelle, directeur immobilier adjoint à l’UFF.</p>
+                <ul class="actions">
+                    <li>
+                        <a href="#" class="button alt">More</a>
+                    </li>
+                </ul>
+            </div>
+        </article>
+        <article class="feature right">
+            <span class="image"><img src="images/pic02.jpg" alt="" /></span>
+            <div class="content">
+                <h2>Integer vitae libero acrisus egestas placerat sollicitudin</h2>
+                <p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue.
+                    Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+                <ul class="actions">
+                    <li>
+                        <a href="#" class="button alt">More</a>
+                    </li>
+                </ul>
+            </div>
+        </article>
+    </div>
+</section>
+
+<!-- Two -->
+<section id="two" class="wrapper special">
+    <div class="inner">
+        <header class="major narrow">
+            <h2>Aliquam Blandit Mauris</h2>
+            <p>Ipsum dolor tempus commodo turpis adipiscing Tempor placerat sed amet accumsan</p>
+        </header>
+        <div class="image-grid">
+            <a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+            <a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+            <a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+            <a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+            <a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+            <a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
+            <a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
+            <a href="#" class="image"><img src="images/pic10.jpg" alt="" /></a>
+        </div>
+        <ul class="actions">
+            <li><a href="#" class="button big alt">Tempus Aliquam</a></li>
+        </ul>
+    </div>
+</section>
