--- a/views/pro/contact.hbs
+++ b/views/pro/contact.hbs
@@ -1,22 +1,22 @@
 {{> nav_bar_pro}}
 <div class="container">
-    <form id="contact" action="" method="post">
+    <form id="contact" action="/pro/contact" method="post">
         <h3>Quick Contact</h3>
         <h4>Contact us today, and get reply with in 24 hours!</h4>
         <fieldset>
             <input placeholder="Your name" type="text" tabindex="1" required autofocus>
         </fieldset>
         <fieldset>
-            <input placeholder="Your Email Address" type="email" tabindex="2" required>
+            <input placeholder="Your Email Address" type="email" tabindex="2">
         </fieldset>
         <fieldset>
-            <input placeholder="Your Phone Number" type="tel" tabindex="3" required>
+            <input placeholder="Your Phone Number" type="tel" tabindex="3">
         </fieldset>
         <fieldset>
-            <input placeholder="Your Web Site starts with http://" type="url" tabindex="4" required>
+            <input placeholder="Your Web Site starts with http://" type="url" tabindex="4">
         </fieldset>
         <fieldset>
-            <textarea placeholder="Type your Message Here...." tabindex="5" required></textarea>
+            <textarea placeholder="Type your Message Here...." tabindex="5"></textarea>
         </fieldset>
         <fieldset>
             <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
