--- a/views/invest/index.hbs
+++ b/views/invest/index.hbs
@@ -5,19 +5,17 @@
     <div class="value-proposition">
         <div>
             <img src="/img/walking.png" alt="img">
-            <h2>Learn</h2>
+            <p>Learn</p>
+            <span>Learn all there is to know about real-estate and investment to feel confident</span>
         </div>
         <div>
             <img src="/img/key.png" alt="img">
-            <h2>Make it happen</h2>
+            <p>Make it happen</p>
         </div>
         <div>
             <img src="/img/be-zen.png" alt="img">
-            <h2>Be supported</h2>
+            <p>Be supported</p>
         </div>
     </div>
 </div>
 
-<div class="slide-in-bottom section2" >
-
-</div>
