--- a/views/invest/index.hbs
+++ b/views/invest/index.hbs
@@ -4,18 +4,25 @@
     <h1>Invest. Now.</h1>
     <div class="value-proposition">
         <div>
-            <img src="/img/walking.png" alt="img">
+            <a href=""><img src="/img/walking.png" alt="img">
+            </a>
             <p>Learn</p>
-            <span>Learn all there is to know about real-estate and investment to feel confident</span>
+            <span class="text-expl">Learn all there is to know about real-estate and investment to feel confident to do
+                your first step.</span>
         </div>
         <div>
-            <img src="/img/key.png" alt="img">
+            <a href="/signin"><img src="/img/key.png" alt="img"></a>
             <p>Make it happen</p>
+            <span class="text-expl">Tell us about your need and project. Our partners will get in touch to make your
+                project become reality.</span>
+
         </div>
         <div>
-            <img src="/img/be-zen.png" alt="img">
+            <a href="/"><img src="/img/be-zen.png" alt="img"></a>
             <p>Be supported</p>
+            <span class="text-expl">Use our digital project-management tool to assist you in every aspect of your
+                project. </span>
+
         </div>
     </div>
 </div>
-
