--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -5,15 +5,25 @@
 html,
 body {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     margin: 0;
     background-image: url("/img/background-black.png")
 }
 
+h2 {
+    margin-top: 20px;
+    color: white;
+    text-align: center;
+}
+
+#oops {
+    height: 200px;
+}
+
 .shopping-cart {
     width: 750px;
-    height: 300px;
-    margin: 80px auto;
+    height: 500px;
+    margin: 40px auto;
     background: #FFFFFF;
     box-shadow: 1px 2px 3px 0px rgba(0, 0, 0, 0.10);
     border-radius: 6px;
@@ -32,6 +42,7 @@ body {
     font-size: 18px;
     font-weight: 400;
     width: 750px;
+    text-align: center;
 }
 
 .item {
