--- a/views/pro/cart.hbs
+++ b/views/pro/cart.hbs
@@ -19,10 +19,10 @@
     </div>
     {{else}}
     <div class="title">
-        <p>Let's put some cool contacts in your glamor cart..!</p>
+        <p>Let's put some cool contacts in your glamor cart.. !</p>
     </div>
     <div>
-        <img src="img/empty.png" alt="oops">
+        <img id="oops" src="/img/empty.png" alt="oops">
     </div>
     <div class="button-section">
         <a href="/pro/search/"><button class="btn" id="submit">Let's hunt</button></a>
