--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -1,11 +1,9 @@
 {{> nav_bar_investor}}
 <section id="banner">
-    <img id="logo-keeeyz"src="/public/img/keeyz-logo.png" alt="">
+    <img id="logo-keeeyz" src="/public/img/keeyz-logo.png" alt="">
     <h2>Learn from our best experts</h2>
     <p>and prepare your future</p>
-    <ul class="actions">
-        <li><a href="#" class="button big special">Learn More</a></li>
-    </ul>
+    <a href="/" class="button big special">Learn More</a>
 </section>
 
 <!-- One -->
@@ -48,16 +46,6 @@
             <h2>Aliquam Blandit Mauris</h2>
             <p>Ipsum dolor tempus commodo turpis adipiscing Tempor placerat sed amet accumsan</p>
         </header>
-        <div class="image-grid">
-            <a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-            <a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-            <a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-            <a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-            <a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-            <a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-            <a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-            <a href="#" class="image"><img src="images/pic10.jpg" alt="" /></a>
-        </div>
         <ul class="actions">
             <li><a href="#" class="button big alt">Tempus Aliquam</a></li>
         </ul>
