--- a/views/pro/index-pro.hbs
+++ b/views/pro/index-pro.hbs
@@ -4,5 +4,6 @@
     <h1>Win yourself some time</h1>
     <h4>Our high-profile young investors are waiting for you to get into action</h4>
     {{!-- <img src="/img/Success.png" alt="success"> --}}
+    <img src="/img/marginalia-done.png" alt="">
     <button id="btn-pro"><a href="/pro/dashboard">Try now</a></button>
 </div>
